Fix text layout problems on different size screens

--- a/css/main.css
+++ b/css/main.css
@@ -41,13 +41,6 @@ h1, p, span {
     text-align: center;
 }
 
-h1 {
-    margin-top: 25px;
-    margin-bottom: 25px;
-    font-size: 32px;
-    font-weight: 300;
-}
-
 p {
     margin-bottom: 25px;
     font-size: 22px;
@@ -88,7 +81,7 @@ p {
     display: flex;
     flex-basis: 100%;
     margin-top: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 75px;
     margin-right: 30%;
     margin-left: 30%;
     justify-content: center;
@@ -100,7 +93,7 @@ p {
 }
 
 #console-name {
-    margin-bottom: 5%;
+    margin-bottom: 75px;
     font-size: 25px;
 }
 
